# collectibles

./: .gitignore  README.md  example.py  example_decorator_style.py  pyproject.toml  tox.ini
.github/workflows/: release.yaml  tests.yaml
collectibles/: __init__.py
dataclass_collections/: __init__.py  list_collection.py  list_decorator.py
tests/: test_list_collection.py  test_reductions.py
